--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,12 @@
   "require": {
     "composer/installers": "*",
     "silverstripe/framework": ">=4.0",
-    "dorsetdigital/silverstripe-derriford-theme-functions": "*"
+    "dorsetdigital/silverstripe-derriford-theme-functions": "*",
+    "dnadesign/silverstripe-elemental": "^3.0",
+    "silverstripe/elemental-bannerblock": "^1.0",
+    "dorsetdigital/silverstripe-photoswipe-elemental": "^1.0",
+    "dorsetdigital/silverstripe-element-imagetext": "^1",
+    "dorsetdigital/silverstripe-element-iframe": "^1"    
   },
   "minimum-stability": "dev",
   "suggest": {
