--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   ],
   "require": {
     "composer/installers": "*",
-    "silverstripe/framework": ">=4.0",
+    "silverstripe/framework": "^4.0",
     "dorsetdigital/silverstripe-derriford-theme-functions": "*",
     "dnadesign/silverstripe-elemental": "^3.0",
     "silverstripe/elemental-bannerblock": "^1.0",
