--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "dorsetdigital/silverstripe-element-iframe": "^2",
     "dorsetdigital/silverstripe-element-slider": "*",
     "dnadesign/silverstripe-elemental-userforms": "^1",
-    "dorsetdigital/silverstripe-element-cta": "dev-master"
+    "dorsetdigital/silverstripe-element-cta": "dev-master",
+    "dorsetdigital/silverstripe-element-quotation": "dev-master"
   },
   "minimum-stability": "dev",
   "suggest": {
